correct alignement des text et like dans les comms des psots

--- a/src/Component/Actus/Actus.css
+++ b/src/Component/Actus/Actus.css
@@ -176,3 +176,6 @@
     margin-right: auto;
 }
 
+#content {
+    margin-top: 0px;
+}
