--- a/src/Component/Commentaire/Commentaire.css
+++ b/src/Component/Commentaire/Commentaire.css
@@ -37,14 +37,14 @@
 }
 
 #Com {
-    margin-top: 18px;
+    margin-top: 25px;
     margin-left: 10px;
     width: 190px;
     text-align: justify;
 }
 
 #lesLikes {  
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 21px;
     margin-left: 65px;
     display: flex;
